STYLE attemps image stretch fix on safari

--- a/src/src/index.css
+++ b/src/src/index.css
@@ -69,6 +69,7 @@ body {
     to   { height: 50px; }
   }
   .PointSidePanel img {
+    width: 100%;
     height: auto; 
   }
  
